--- a/Shop.Catalog.Api/Shop.Catalog.Api.csproj
+++ b/Shop.Catalog.Api/Shop.Catalog.Api.csproj
@@ -11,11 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.4" />
+    <PackageReference Include="JsonApiSerializer" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
-    <PackageReference Include="NSwag.Annotations" Version="11.15.3" />
-    <PackageReference Include="NSwag.AspNetCore" Version="11.15.3" />
-    <PackageReference Include="NSwag.Core" Version="11.15.3" />
   </ItemGroup>
 
   <ItemGroup>
