Implemented trace identifier middleware

--- a/Shop.Catalog.Api/appsettings.json
+++ b/Shop.Catalog.Api/appsettings.json
@@ -1,17 +1,4 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  },
   "MetricsOptions": {
     "DefaultContextLabel": "Shop.Catalog",
     "Enabled": true
@@ -27,6 +14,13 @@
     "MetricsEndpointEnabled": true,
     "MetricsTextEndpointEnabled": true,
     "EnvironmentInfoEndpointEnabled": true
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Literate" ],
+    "MinimumLevel": "Debug",
+    "Properties": {
+      "Application": "Sample"
+    }
   }
 
 }
