--- a/Shop.Catalog.Api/Properties/launchSettings.json
+++ b/Shop.Catalog.Api/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
+      "applicationUrl": "http://localhost:49981/",
       "sslPort": 0
     }
   },
