--- a/Shop.Catalog.Api/Shop.Catalog.Api.csproj
+++ b/Shop.Catalog.Api/Shop.Catalog.Api.csproj
@@ -10,14 +10,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.3.4" />
+    <PackageReference Include="Akka" Version="1.3.5" />
     <PackageReference Include="App.Metrics.AspNetCore.Core" Version="2.0.0-preview1" />
     <PackageReference Include="App.Metrics.AspNetCore.Health" Version="2.0.0-preview1" />
     <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="2.0.0-preview1" />
+    <PackageReference Include="CorrelationId" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1-dev-00022" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="2.0.0" />
   </ItemGroup>
