--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  shop.catalog.api:
+  shop-catalog-api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
