--- a/Shop.Catalog.Api/appsettings.json
+++ b/Shop.Catalog.Api/appsettings.json
@@ -8,7 +8,7 @@
     "ApdexTSeconds": 0.1,
     "IgnoredHttpStatusCodes": [ 404 ],
     "IgnoredRoutesRegexPatterns": [],
-    "OAuth2TrackingEnabled": true
+    "OAuth2TrackingEnabled": false
   },
   "MetricEndpointsOptions": {
     "MetricsEndpointEnabled": true,
