--- a/Shop.Catalog.Api/Shop.Catalog.Api.csproj
+++ b/Shop.Catalog.Api/Shop.Catalog.Api.csproj
@@ -6,14 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Properties\PublishProfiles\registry.hub.docker.com_ygor.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.5" />
+    <PackageReference Include="App.Metrics.AspNetCore" Version="2.0.0-preview1" />
     <PackageReference Include="App.Metrics.AspNetCore.Core" Version="2.0.0-preview1" />
     <PackageReference Include="App.Metrics.AspNetCore.Health" Version="2.0.0-preview1" />
     <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="2.0.0-preview1" />
+    <PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="2.0.0-preview1" />
+    <PackageReference Include="App.Metrics.Formatters.Prometheus" Version="2.0.0-preview1" />
     <PackageReference Include="CorrelationId" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.1.0" />
